2001-12-03  Manish Singh  <yosh@gimp.org>

	* tests/module-test.c: g_module_symbol takes a gpointer *, not just
	a gpointer

	* tests/libmoduletestplugin_a.c: here too

2001-11-29  Havoc Pennington  <hp@redhat.com>

	* glib/gtree.c (g_tree_foreach):
	* glib/ghash.c (g_hash_table_foreach): 

	Add notes about how you shouldn't modify these data structures as
	you iterate over them.
	
Thu Nov 29 11:16:03 2001  Owen Taylor  <otaylor@redhat.com>

	* HACKING: Update (#65721, Dave Neary)

2001-11-28  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/gdate.c: Fixed wrong order in conversion.

Wed Nov 28 18:34:22 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.[ch]: Rename (private) GSource.id and 
	id parameter to g_main_context_find_source_by_id()
	to avoid problems with Objective C where 'id' is 
	a keyword. (#65616)

2001-11-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* glib/gutf8.c (utf8_skip_data): In order to avoid infinite loops
	on invalid UTF-8 strings, change the skip count for 0xfe and 0xff
	from 0 to 1.

2001-11-28  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: Always call GLIB_SIZEOF(..., system_thread). Fixes
	#65624.

2001-11-28  Tor Lillqvist  <tml@iki.fi>

	* glibconfig.h.win32.in: Add GLIB_SIZEOF_SIZE_T here, too.

2001-11-27  Dan Winship  <danw@ximian.com>

	* configure.in (G_MODULE_LDFLAGS): Set this from libtool rather
	than hardcoding values for certain platforms.

	* glib/libcharset/config.charset: Add a rule for NetBSD.

	* glib/libcharset/localcharset.c (_g_locale_get_charset_aliases):
	If LIBCHARSET_ALIAS_DIR is set, look for charset.aliases there.

	* tests/Makefile.am (TESTS_ENVIRONMENT): set LIBCHARSET_ALIAS_DIR
	so we don't depend on charset.aliases having been installed

2001-11-26  Matthias Clasen  <matthiasc@poet.de>
	
	* glib/gnode.c (g_node_traverse): Implement G_LEVEL_ORDER correctly.

	* tests/node-test.c: Add a testcase for G_LEVEL_ORDER implementation.
